langages change add de, it, nl, ro  modified: app.js and views/edit.html and style/cssI18n/

--- a/views/edit.html
+++ b/views/edit.html
@@ -244,6 +244,43 @@
 							</div>
 						</div>
 					</li>
+                                       <li class="settings-item {{#unless account.enabled}}disabled{{/unless}}" data-name="froud_settings">
+                                                        <a class="settings-link clearfix">
+                                                                <span class="title">{{ i18n.account.froud.title }}</span>
+                                                                <span class="description">{{ i18n.account.froud.perday_descript }}: {{account.limit.froud.perday}}{{#if account.limit.froud.perday}}&nbsp; / &nbsp;{{ i18n.account.froud.permin_descript }}: {{ account.limit.froud.permin }}{{/if}}</span>
+                                                                <span class="update">
+                                                                        <i class="fa fa-cog icon-small"></i>
+                                                                        <span class="text">{{ i18n.editSettings }}</span>
+                                                                </span>
+                                                                <span class="changes-saved">{{ i18n.changesSaved }}</span>
+                                                        </a>
+                                                        <div class="settings-item-content">
+                                                                <div class="row-fluid">
+                                                                    <div class="span12">
+                                                                            <form id="form_froud_contact" class="form-horizontal">
+                                                                                    <div class="control-group">
+                                                                                            <label class="control-label" for="froud_limit_perday">{{ i18n.account.froud.perday }}</label>
+                                                                                            <div class="controls">
+                                                                                                    <input type="text" id="froud_limit_perday" name="limit.froud.perday" value="{{account.limit.froud.perday}}" placeholder="{{ i18n.account.froud.perdaydefault }}" data-original_value="{{account.limit.froud.perday}}"/>
+                                                                                            {{ i18n.account.froud.perday_descript }}</div>
+                                                                                    </div>
+                                                                                    <div class="control-group">
+                                                                                            <label class="control-label" for="froud_limit_permin">{{ i18n.account.froud.permin }}</label>
+                                                                                            <div class="controls">
+                                                                                                    <input type="text" id="froud_limit_permin" name="limit.froud.permin" value="{{account.limit.froud.permin}}" placeholder="{{ i18n.account.froud.permindefault }}" data-original_value="{{account.limit.froud.permin}}"/>
+                                                                                            {{ i18n.account.froud.permin_descript }}</div>
+                                                                                    </div>
+                                                                                    <div class="action-group clearfix">
+                                                                                            <div class="action-bar">
+                                                                                                    <button type="button" class="monster-button cancel">{{ i18n.cancel }}</button>
+                                                                                                    <button type="submit" class="monster-button-success change" data-module="account" data-field="froud_contact">{{ i18n.saveChanges }}</button>
+                                                                                            </div>
+                                                                                    </div>
+                                                                            </form>
+                                                                    </div>
+                                                            </div>
+                                                    </div>
+                                        </li>
 					<!-- Billing Contact -->
 					<li class="settings-item {{#unless account.enabled}}disabled{{/unless}}" data-name="accountsmanager_billing_contact">
 						<a class="settings-link clearfix">
@@ -326,19 +363,12 @@
 												<select id="accountsmanager_account_timezone" name="timezone" data-original_value="{{account.timezone}}"></select>
 											</div>
 										</div>
-										<div class="control-group">
-											<label class="control-label" for="accountsmanager_language">{{ i18n.accountLanguage }}</label>
-											<div class="controls">
-												<select id="user_language" name="language">
-													{{#select account.language}}
-														<option value="auto">{{i18n.languages.auto}}</option>
-														<option value="en-US">{{i18n.languages.americanEnglish}}</option>
-														<option value="fr-FR">{{i18n.languages.frenchFrench}}</option>
-														<option value="ru-RU">{{i18n.languages.russianRussian}}</option>
-													{{/select}}
-												</select>
-											</div>
-										</div>
+                                                                                <div class="control-group">
+                                                                                        <label class="control-label" for="account_language">{{ i18n.accountLanguage }}</label>
+                                                                                        <div class="controls">
+                                                                                                <select id="accountsmanager_account_language" name="language" data-original_value="{{account.language}}"></select>
+                                                                                        </div>
+                                                                                </div>
 										<div class="action-group clearfix">
 											<div class="action-bar">
 												<button type="button" class="cancel monster-button">{{ i18n.cancel }}</button>
