add technical details

--- a/views/edit.html
+++ b/views/edit.html
@@ -233,6 +233,43 @@
 												<input type="text" id="accountsmanager_technical_contact_number" name="contact.technical.number" value="{{account.contact.technical.number}}" data-original_value="{{account.contact.technical.number}}" maxlength="12" />
 											</div>
 										</div>
+
+										<div class="control-group">
+											<label class="control-label" for="accountsmanager_technical_contact_mobilenumber">{{ i18n.technicalContact.technicalContactMobile }}</label>
+											<div class="controls">
+												<input type="text" id="accountsmanager_technical_contact_mobilenumber" name="contact.technical.mobilenumber" value="{{account.contact.technical.mobilenumber}}" data-original_value="{{account.contact.technical.mobilenumber}}" maxlength="12" />
+											</div>
+										</div>
+
+										<div class="control-group">
+											<label class="control-label" for="accountsmanager_technical_contact_address">{{ i18n.technicalContact.technicalAddress }}</label>
+											<div class="controls">
+												<input type="text" id="accountsmanager_technical_contact_address" name="contact.technical.address" value="{{account.contact.technical.address}}" data-original_value="{{account.contact.technical.address}}" maxlength="12" />
+											</div>
+										</div>
+
+										<div class="control-group">
+											<label class="control-label" for="accountsmanager_technical_contact_zip">{{ i18n.technicalContact.technicalZIP }}</label>
+											<div class="controls">
+												<input type="text" id="accountsmanager_technical_contact_zip" name="contact.technical.zip" value="{{account.contact.technical.zip}}" data-original_value="{{account.contact.technical.zip}}" maxlength="12" />
+												<input type="text" id="accountsmanager_technical_contact_city" name="contact.technical.city" value="{{account.contact.technical.city}}" data-original_value="{{account.contact.technical.city}}" maxlength="12" />
+											</div>
+										</div>
+
+										<div class="control-group">
+											<label class="control-label" for="accountsmanager_technical_contact_connect">{{ i18n.technicalContact.technicalConnect }}</label>
+											<div class="controls">
+												<input type="text" id="accountsmanager_technical_contact_connect" name="contact.technical.connect" value="{{account.contact.technical.connect}}" data-original_value="{{account.contact.technical.connect}}" maxlength="12" />
+											</div>
+										</div>
+
+										<div class="control-group">
+											<label class="control-label" for="accountsmanager_technical_contact_line">{{ i18n.technicalContact.technicalLine }}</label>
+											<div class="controls">
+												<input type="text" id="accountsmanager_technical_contact_line" name="contact.technical.line" value="{{account.contact.technical.line}}" data-original_value="{{account.contact.technical.line}}" maxlength="12" />
+											</div>
+										</div>
+
 										<div class="action-group clearfix">
 											<div class="action-bar">
 												<button type="button" class="cancel monster-button">{{ i18n.cancel }}</button>
