zoipertoken support in account

--- a/views/edit.html
+++ b/views/edit.html
@@ -346,6 +346,13 @@
                                                                                                 <input type="text" id="provision_provisionpass" name="provision.provisionpass" value="{{account.provision.provisionpass}}" placeholder="" data-original_value="{{account.provision.provisionpass}}"/></div>
                                                                                 </div>
 
+                                                                                <div class="control-group">
+                                                                                        <label class="control-label" for="provision_zoipertoken">{{ i18n.account.provision.zoiperToken }}</label>
+                                                                                        <div class="controls">
+                                                                                                <input type="text" id="provision_zoipertoken" name="provision.zoipertoken" value="{{account.provision.zoipertoken}}" placeholder="" data-original_value="{{account.provision.zoipertoken}}"/></div>
+                                                                                </div>
+
+
                                                                                <div class="control-group">
                                                                                         <label class="control-label" for="provision_enabled">{{ i18n.account.provision.supportProvision }}</label>
                                                                                         <div class="controls checkbox-container">
