--- a/views/accountsAdminForm.html
+++ b/views/accountsAdminForm.html
@@ -80,13 +80,13 @@
 							<div class="controls clearfix">
 								<div class="input-prepend span12">
 									<span class="add-on"><i class="fa fa-user"></i></span>
-									<input required  type="text" name="first_name" placeholder="First name"/>
+									<input required  type="text" name="first_name" placeholder="{{ i18n.adminPlaceholders.firstName }}"/>
 								</div>
 							</div>
 							<div class="controls clearfix">
 								<div class="input-prepend span12">
 									<span class="add-on"><i class="fa fa-user"></i></span>
-									<input required  type="text" name="last_name" placeholder="Last name"/>
+									<input required  type="text" name="last_name" placeholder="{{ i18n.adminPlaceholders.lastName }}"/>
 								</div>
 							</div>
 							<div>
@@ -102,8 +102,8 @@
 								</div>
 								<div class="controls controls-row new-admin-password-div clearfix">
 										<div class="input-container clearfix">
-											<input required type="password" class="span6" name="password" placeholder="Password"/>
-											<input required type="password" class="span6" name="extra.password_confirm" placeholder="Confirm"/>
+											<input required type="password" class="span6" name="password" placeholder="{{ i18n.adminPlaceholders.password }}"/>
+											<input required type="password" class="span6" name="extra.password_confirm" placeholder="{{ i18n.adminPlaceholders.confirm }}"/>
 											<div class="password-strength-container"></div>
 										</div>
 										<div class="checkbox-container">
